[init] update swagger add gitignore
