# docs/swagger.json
@@ -54,7 +54,7 @@
                         ],
                         "type": "boolean",
                         "description": "giftCharge status",
-                        "name": "isActive",
+                        "name": "isValid",
                         "in": "query"
                     }
                 ],
@@ -107,7 +107,7 @@
                 "summary": "Get giftCharge by id",
                 "parameters": [
                     {
-                        "type": "string",
+                        "type": "integer",
                         "description": "gift_id",
                         "name": "gift_id",
                         "in": "path",
